pod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:
  namespace: cjarcau
  labels:
    app:
spec:
  replicas: 1
  selector:
    matchLabels:
      app:
  template:
    metadata:
      labels:
        app:
    spec:
      containers:
      - name:
        image: scr4pp/notebook
        ports:
        - containerPort: 8888
