pod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:
  namespace: cjarcau
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name:
            port:
              number:
  ingressClassName: nginx
